refactor: create workspace dto
