# pkg/api/docs/swagger.json
@@ -1286,29 +1286,11 @@
         "CreateProjectDTO": {
             "type": "object",
             "properties": {
-                "build": {
-                    "$ref": "#/definitions/ProjectBuild"
+                "existingProjectConfig": {
+                    "$ref": "#/definitions/ExistingProjectConfigDTO"
                 },
-                "envVars": {
-                    "type": "object",
-                    "additionalProperties": {
-                        "type": "string"
-                    }
-                },
-                "existingProjectConfigName": {
-                    "type": "string"
-                },
-                "image": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "source": {
-                    "$ref": "#/definitions/CreateProjectConfigSourceDTO"
-                },
-                "user": {
-                    "type": "string"
+                "newProjectConfig": {
+                    "$ref": "#/definitions/CreateProjectConfigDTO"
                 }
             }
         },
@@ -1331,6 +1313,17 @@
                     }
                 },
                 "target": {
+                    "type": "string"
+                }
+            }
+        },
+        "ExistingProjectConfigDTO": {
+            "type": "object",
+            "properties": {
+                "branch": {
+                    "type": "string"
+                },
+                "name": {
                     "type": "string"
                 }
             }
